--- a/.github/workflows/continuousintegration.yml
+++ b/.github/workflows/continuousintegration.yml
@@ -33,3 +33,16 @@ jobs:
       uses: johnnyhuy/actions-discord-git-webhook@main 
       with:
         webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
+
+unittests:
+    runs-on: ubuntu-latest
+      steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+    - run: npm install
+    - run: npm run build --if-present
+    - run: npm test
+
